--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
     <div class="start-content">
       <img src="/Socke_Bild.jpeg" alt="Socke" class="start-sock-image">
       <h1 class="start-title">Sockendynamik- und Paarbindungsinventar</h1>
+      <p class="start-subtitle">Die Resultate</p>
       <p class="start-hint">↓ Tippen zum Starten</p>
       <button class="start-btn" id="btn-start">Starten →</button>
     </div>
   </div>
 
   <!-- PAGE 2: Teil A -->
-  <div class="page" id="page-teil-a">
+  <div class="page page-light" id="page-teil-a">
     <header class="page-header">
       <div class="section-eyebrow">
         <span class="section-number" aria-hidden="true">A</span>
@@ -31,14 +32,24 @@
           <p class="section-subtitle">Emotionale Bindung zu Socken &mdash; nie &rarr; immer</p>
         </div>
       </div>
+      <div class="filter-bar" role="group" aria-label="Filter nach Zugehörigkeit">
+        <button class="filter-btn active" data-filter="alle">Alle</button>
+        <button class="filter-btn" data-filter="patienten">Patienten</button>
+        <button class="filter-btn" data-filter="personal">Personal</button>
+      </div>
     </header>
     <div class="page-content">
       <div id="teil-a-content" class="visualizations"></div>
+      <footer class="impressum">
+        © 2026 – Alle Faserrechte vorbehalten<br>
+        Am Roseneck 6, 83209 Prien am Chiemsee, Station A5<br>
+        Klinisches Institut für Textile Objektbeziehungen (KITO)
+      </footer>
     </div>
   </div>
 
   <!-- PAGE 3: Teil B -->
-  <div class="page" id="page-teil-b">
+  <div class="page page-light" id="page-teil-b">
     <header class="page-header">
       <div class="section-eyebrow">
         <span class="section-number" aria-hidden="true">B</span>
@@ -47,14 +58,24 @@
           <p class="section-subtitle">Entscheidungspräferenzen</p>
         </div>
       </div>
+      <div class="filter-bar" role="group" aria-label="Filter nach Zugehörigkeit">
+        <button class="filter-btn active" data-filter="alle">Alle</button>
+        <button class="filter-btn" data-filter="patienten">Patienten</button>
+        <button class="filter-btn" data-filter="personal">Personal</button>
+      </div>
     </header>
     <div class="page-content">
       <div id="teil-b-content" class="visualizations"></div>
+      <footer class="impressum">
+        © 2026 – Alle Faserrechte vorbehalten<br>
+        Am Roseneck 6, 83209 Prien am Chiemsee, Station A5<br>
+        Klinisches Institut für Textile Objektbeziehungen (KITO)
+      </footer>
     </div>
   </div>
 
   <!-- PAGE 4: Teil C -->
-  <div class="page" id="page-teil-c">
+  <div class="page page-light" id="page-teil-c">
     <header class="page-header">
       <div class="section-eyebrow">
         <span class="section-number" aria-hidden="true">C</span>
@@ -63,14 +84,24 @@
           <p class="section-subtitle">Sockenpräferenzen &amp; Verhalten</p>
         </div>
       </div>
+      <div class="filter-bar" role="group" aria-label="Filter nach Zugehörigkeit">
+        <button class="filter-btn active" data-filter="alle">Alle</button>
+        <button class="filter-btn" data-filter="patienten">Patienten</button>
+        <button class="filter-btn" data-filter="personal">Personal</button>
+      </div>
     </header>
     <div class="page-content">
       <div id="teil-c-content" class="visualizations"></div>
+      <footer class="impressum">
+        © 2026 – Alle Faserrechte vorbehalten<br>
+        Am Roseneck 6, 83209 Prien am Chiemsee, Station A5<br>
+        Klinisches Institut für Textile Objektbeziehungen (KITO)
+      </footer>
     </div>
   </div>
 
   <!-- PAGE 5: Teil D — Abschiebsbriefe -->
-  <div class="page" id="page-teil-d">
+  <div class="page page-light" id="page-teil-d">
     <header class="page-header">
       <div class="section-eyebrow">
         <span class="section-number" aria-hidden="true">D</span>
@@ -82,6 +113,11 @@
     </header>
     <div class="page-content">
       <div id="abschiebsbriefe-content" class="text-list-container"></div>
+      <footer class="impressum">
+        © 2026 – Alle Faserrechte vorbehalten<br>
+        Am Roseneck 6, 83209 Prien am Chiemsee, Station A5<br>
+        Klinisches Institut für Textile Objektbeziehungen (KITO)
+      </footer>
     </div>
   </div>
 
@@ -98,6 +134,11 @@
     </header>
     <div class="page-content">
       <div id="slideshow-container" class="slideshow-container"></div>
+      <footer class="impressum">
+        © 2026 – Alle Faserrechte vorbehalten<br>
+        Am Roseneck 6, 83209 Prien am Chiemsee, Station A5<br>
+        Klinisches Institut für Textile Objektbeziehungen (KITO)
+      </footer>
     </div>
   </div>
 
