fix: setze 6 Anpassungen für Design, Bezeichnungen, D3 Skala und Parser um

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="de">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
   <link rel="preload" href="/Socke_Bild.jpeg" as="image">
   <link rel="stylesheet" href="/src/styles/main.css">
 </head>
+
 <body>
 
   <!-- PAGE 1: Start -->
@@ -122,7 +124,6 @@
       <div id="abschiebsbriefe-content" class="text-list-container"></div>
       <div class="section-divider">
         <h3 class="section-divider-title">D3 — Identifikation mit dem präferierten Sockenpaar</h3>
-        <p class="section-divider-subtitle">gar nicht &rarr; vollständig</p>
       </div>
       <div id="teil-d3-content" class="visualizations"></div>
       <footer class="impressum">
@@ -167,11 +168,13 @@
   <!-- PAGE 7: Danke -->
   <div class="page page-danke" id="page-danke">
     <div class="danke-content">
-      <p class="danke-kito">Klinisches Institut für Textile Objektbeziehungen (KITO)</p>
-      <h1 class="danke-title">Vielen Dank für<br>Ihre Teilnahme!</h1>
-      <p class="danke-subtitle">Sockendynamik- und Paarbindungsinventar (SPI-01, Revision 3.2)</p>
-      <a class="pdf-download-btn" href="./Studie.pdf" download="Sockendynamik-Fragebogen.pdf">
-        ↓ Fragebogen herunterladen
+      <p class="danke-kito">Ihr Klinisches Institut für Textile Objektbeziehungen (KITO)</p>
+      <h1 class="danke-title">Wir sagen Danke! 🧦</h1>
+      <p class="danke-subtitle">Dank dir und den anderen mutigen Teilnehmer:innen sind wir dem großen Rätsel der
+        Socken-Beziehungen ein enormes Stück nähergekommen.<br>Mögen deine Socken stets in Frieden und als glückliches
+        Paar zusammenleben!</p>
+      <a class="pdf-download-btn" href="/Studie.pdf" download="Sockendynamik-Fragebogen.pdf">
+        ↓ Fragebogen als PDF herunterladen
       </a>
     </div>
   </div>
@@ -185,4 +188,5 @@
 
   <script type="module" src="/src/main.js"></script>
 </body>
+
 </html>
