--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
   <!-- PAGE 7: Danke -->
   <div class="page page-danke" id="page-danke">
     <div class="danke-content">
+      <div id="podium-content"></div>
       <p class="danke-kito">Ihr Klinisches Institut für Textile Objektbeziehungen (KITO)</p>
       <h1 class="danke-title">Wir sagen Danke! 🧦</h1>
       <p class="danke-subtitle">Dank dir und den anderen mutigen Teilnehmer:innen sind wir dem großen Rätsel der
