--- a/index.html
+++ b/index.html
@@ -105,26 +105,60 @@
     </div>
   </div>
 
-  <!-- PAGE 5: Teil D — Zeichnungen + Abschiedsbriefe -->
-  <div class="page page-light" id="page-teil-d">
+  <!-- PAGE 5: Teil D1 — Zeichnungen -->
+  <div class="page page-light" id="page-teil-d1">
     <header class="page-header">
       <div class="section-eyebrow">
-        <span class="section-number" aria-hidden="true">D</span>
+        <span class="section-number" aria-hidden="true">D1</span>
         <div class="section-title-group">
           <h2>Teil D</h2>
-          <p class="section-subtitle">Zeichnungen &amp; Abschiedsbriefe</p>
+          <p class="section-subtitle">Zeichnungen</p>
         </div>
       </div>
     </header>
     <div class="page-content">
       <div id="slideshow-container" class="slideshow-container"></div>
-      <div class="section-divider">
-        <h3 class="section-divider-title">Abschiedsbriefe an verlorene Socken</h3>
+      <footer class="impressum">
+        © 2026 – Alle Faserrechte vorbehalten<br>
+        Am Roseneck 6, 83209 Prien am Chiemsee, Station A5<br>
+        Klinisches Institut für Textile Objektbeziehungen (KITO)
+      </footer>
+    </div>
+  </div>
+
+  <!-- PAGE 6: Teil D2 — Abschiedsbriefe -->
+  <div class="page page-light" id="page-teil-d2">
+    <header class="page-header">
+      <div class="section-eyebrow">
+        <span class="section-number" aria-hidden="true">D2</span>
+        <div class="section-title-group">
+          <h2>Teil D</h2>
+          <p class="section-subtitle">Abschiedsbriefe an verlorene Socken</p>
+        </div>
       </div>
+    </header>
+    <div class="page-content">
       <div id="abschiebsbriefe-content" class="text-list-container"></div>
-      <div class="section-divider">
-        <h3 class="section-divider-title">D3 — Identifikation mit dem präferierten Sockenpaar</h3>
+      <footer class="impressum">
+        © 2026 – Alle Faserrechte vorbehalten<br>
+        Am Roseneck 6, 83209 Prien am Chiemsee, Station A5<br>
+        Klinisches Institut für Textile Objektbeziehungen (KITO)
+      </footer>
+    </div>
+  </div>
+
+  <!-- PAGE 7: Teil D3 — Identifikation -->
+  <div class="page page-light" id="page-teil-d3">
+    <header class="page-header">
+      <div class="section-eyebrow">
+        <span class="section-number" aria-hidden="true">D3</span>
+        <div class="section-title-group">
+          <h2>Teil D</h2>
+          <p class="section-subtitle">Identifikation mit dem präferierten Paar</p>
+        </div>
       </div>
+    </header>
+    <div class="page-content">
       <div id="teil-d3-content" class="visualizations"></div>
       <footer class="impressum">
         © 2026 – Alle Faserrechte vorbehalten<br>
@@ -134,7 +168,7 @@
     </div>
   </div>
 
-  <!-- PAGE 6: Teil E — Postinterventionelle Reflexion -->
+  <!-- PAGE 8: Teil E — Postinterventionelle Reflexion -->
   <div class="page page-light" id="page-teil-e">
     <header class="page-header">
       <div class="section-eyebrow">
@@ -165,18 +199,24 @@
     </div>
   </div>
 
-  <!-- PAGE 7: Danke -->
+  <!-- PAGE 9: Danke -->
   <div class="page page-danke" id="page-danke">
-    <div class="danke-content">
-      <div id="podium-content"></div>
-      <p class="danke-kito">Ihr Klinisches Institut für Textile Objektbeziehungen (KITO)</p>
-      <h1 class="danke-title">Wir sagen Danke! 🧦</h1>
-      <p class="danke-subtitle">Dank dir und den anderen mutigen Teilnehmer:innen sind wir dem großen Rätsel der
-        Socken-Beziehungen ein enormes Stück nähergekommen.<br>Mögen deine Socken stets in Frieden und als glückliches
-        Paar zusammenleben!</p>
-      <a class="pdf-download-btn" href="/Studie.pdf" download="Sockendynamik-Fragebogen.pdf">
-        ↓ Fragebogen als PDF herunterladen
-      </a>
+    <div class="danke-content" style="gap: var(--space-xl);">
+      <div>
+        <h1 class="danke-title">Wir sagen Danke! 🧦</h1>
+        <p class="danke-subtitle">Dank dir und den anderen mutigen Teilnehmer:innen sind wir dem großen Rätsel der
+          Socken-Beziehungen ein enormes Stück nähergekommen.<br>Mögen deine Socken stets in Frieden und als glückliches
+          Paar zusammenleben!</p>
+        <a class="pdf-download-btn" href="/Studie.pdf" download="Sockendynamik-Fragebogen.pdf">
+          ↓ Fragebogen als PDF herunterladen
+        </a>
+      </div>
+
+      <div class="podium-wrapper" style="margin-top: 40px;">
+        <p class="danke-kito" style="margin-bottom: 24px; opacity: 0.8; font-size: 0.9rem; text-transform: uppercase;">
+          Live-Ergebnisse der Abstimmung</p>
+        <div id="podium-content"></div>
+      </div>
     </div>
   </div>
 
