--- a/index.html
+++ b/index.html
@@ -117,7 +117,16 @@
       </div>
     </header>
     <div class="page-content">
-      <div id="slideshow-container" class="slideshow-container"></div>
+      <div id="vote-overlay" class="vote-overlay">
+        <div class="vote-overlay-content">
+          <div class="vote-overlay-icon">🗳️</div>
+          <h3>Deine Stimme zählt!</h3>
+          <p>Jeder Teilnehmer hat genau <strong>1 Stimme</strong> für seine persönliche Lieblingssocke.</p>
+          <p class="vote-overlay-hint">Du kannst deine Wahl jederzeit ändern, indem du dein Like wieder entfernst.</p>
+          <button id="btn-vote-ok" class="vote-overlay-btn">Verstanden!</button>
+        </div>
+      </div>
+      <div id="slideshow-container" class="slideshow-container obscured"></div>
       <footer class="impressum">
         © 2026 – Alle Faserrechte vorbehalten<br>
         Am Roseneck 6, 83209 Prien am Chiemsee, Station A5<br>
