feat: mobile bar alignment, rename personal filter, fix pdf link and sync newest data.csv

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="filter-bar" role="group" aria-label="Filter nach Zugehörigkeit">
         <button class="filter-btn active" data-filter="alle">Alle</button>
         <button class="filter-btn" data-filter="patienten">Patienten</button>
-        <button class="filter-btn" data-filter="personal">Personal</button>
+        <button class="filter-btn" data-filter="personal">Therapeutisches Team</button>
       </div>
     </header>
     <div class="page-content">
@@ -189,7 +189,7 @@
       <div class="filter-bar" role="group" aria-label="Filter nach Zugehörigkeit">
         <button class="filter-btn active" data-filter="alle">Alle</button>
         <button class="filter-btn" data-filter="patienten">Patienten</button>
-        <button class="filter-btn" data-filter="personal">Personal</button>
+        <button class="filter-btn" data-filter="personal">Therapeutisches Team</button>
       </div>
     </header>
     <div class="page-content">
@@ -215,7 +215,7 @@
         <p class="danke-subtitle">Dank dir und den anderen mutigen Teilnehmer:innen sind wir dem großen Rätsel der
           Socken-Beziehungen ein enormes Stück nähergekommen.<br>Mögen deine Socken stets in Frieden und als glückliches
           Paar zusammenleben!</p>
-        <a class="pdf-download-btn" href="/Studie.pdf" download="Sockendynamik-Fragebogen.pdf">
+        <a class="pdf-download-btn" href="./Studie.pdf" download="Sockendynamik-Fragebogen.pdf">
           ↓ Fragebogen als PDF herunterladen
         </a>
       </div>
