Make closing text neutral and disable CSV caching

--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@
     <div class="danke-content" style="gap: var(--space-xl);">
       <div>
         <h1 class="danke-title">Wir sagen Danke! 🧦</h1>
-        <p class="danke-subtitle">Dank dir und den anderen mutigen Teilnehmer:innen sind wir dem großen Rätsel der
-          Socken-Beziehungen ein enormes Stück nähergekommen.<br>Mögen deine Socken stets in Frieden und als glückliches
+        <p class="danke-subtitle">Dank der Teilnahme und der vielen mutigen Beiträge sind wir dem großen Rätsel der
+          Socken-Beziehungen ein enormes Stück nähergekommen.<br>Mögen die Socken stets in Frieden und als glückliches
           Paar zusammenleben!</p>
         <a class="pdf-download-btn" href="./Studie.pdf" download="Sockendynamik-Fragebogen.pdf">
           ↓ Fragebogen als PDF herunterladen
